# MAILM

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Dictionary.cpp  Dictionary.h  Distance.hpp  Element.cpp  Element.h  IndexFactory.cpp  IndexFactory.h  KirbyAgent.cpp  KirbyAgent.h  KnowledgeBase.cpp  KnowledgeBase.h  LEIKA_main.cpp  LEIKA_main.h  LICENSE  LogBox.cpp  LogBox.h  MAILMAgent.cpp  MAILMAgent.h  MAILMParameters.cpp  MAILMParameters.h  MT19937.cpp  MT19937.h  Makefile  Parameters.cpp  Parameters.h  Parameters_1478103122.prm  Prefices.cpp  Prefices.h  README.md  Rule.cpp  Rule.h  Semantics.cpp  Semantics.h  XMLreader.cpp  XMLreader.h  XMLreader2.cpp  (+6 more)
SOURCE/: Agent.cpp  Agent.h  Dictionary.cpp  Dictionary.h  Distance.hpp  Element.cpp  Element.h  IndexFactory.cpp  IndexFactory.h  KirbyAgent.cpp  KirbyAgent.h  Knowledge.cpp  Knowledge.h  KnowledgeBase.cpp  KnowledgeBase.h  KnwTest.cpp  LEIKA_main.cpp  LogBox.cpp  LogBox.h  MAILMAgent.cpp  MAILMAgent.h  MAILMParameters.cpp  MAILMParameters.h  MAILM_main.cpp  MAILM_main.h  MT19937.cpp  MT19937.h  Makefile  Parameters.cpp  Prefices.cpp  Prefices.h  Rule.cpp  Rule.h  Semantics.cpp  Semantics.h  XMLreader.cpp  XMLreader.h  XMLreader2.cpp  XMLreader3.cpp  boost_version.cpp  (+4 more)
Sources/: AbcOutput.h  Agent.cpp  Agent.d  Agent.h  Dictionary.cpp  Dictionary.d  Dictionary.h  Distance.hpp  Element.cpp  Element.d  Element.h  IndexFactory.cpp  IndexFactory.d  IndexFactory.h  Knowledge.cpp  Knowledge.d  Knowledge.h  KnwTest.cpp  LilypondOutput.cpp  LilypondOutput.h  LogBox.cpp  LogBox.d  LogBox.h  LylypondOutput.h  (+22 more)
(+983 files in other folders)
