cmake_minimum_required(VERSION 3.10)
project(MAILM CXX)
find_package(Boost)
file(GLOB SRC "Sources/*.h" "Sources/*.cpp")
add_executable(mailm ${SRC})
set(CMAKE_CXX_FLAGS "-std=c++17 -Wall -Wextra -pedantic")
set(CMAKE_CXX_FLAGS_DEBUG "-g3 -O0 -pg")
set(CMAKE_CXX_FLAGS_RELEASE "-03 -march=native")
target_link_libraries(mailm stdc++fs)
